syntax = "proto3";

package ecomm;

option go_package = "ecommpb/ecommpb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message Category {
  string id = 1;
  string name = 2;
  string slug = 3;
  repeated Category ancestors = 4;
  repeated Category childrens = 5;
  google.protobuf.Timestamp last_updated = 6;
}

message Product {
  string id = 1;
  string name = 2;
  string slug = 3;
  string image = 4;
  int32 quantity = 5;
  float value = 6;
  Category category = 7;
  google.protobuf.Timestamp last_updated = 8;
}

message CategoryRequest { string slug = 1; }
message CategoriesMenuResponse { repeated Category categories = 1; }

service EcommService {
  rpc CategoriesMenu(google.protobuf.Empty) returns (CategoriesMenuResponse) {};
  rpc CategoryBreadcrumb(CategoryRequest) returns (CategoriesMenuResponse) {};
  rpc CategoriesSideMenu(CategoryRequest) returns (CategoriesMenuResponse) {};
}
